Closed Bug 101682 Opened 24 years ago Closed 24 years ago

Javascript history.back() and history.go(-1) doe snot restore scrollbar positions.

Categories

(Core :: DOM: Navigation, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla0.9.6

People

(Reporter: me, Assigned: radha)

References

()

Details

Attachments

(2 files)

The javascript history.back and history.go(-1) do not work in Build ID: 2001091621. Visit www.enrique-pineda.com, click any of the comment links. When you are at the comments page, click "Previous page". No action is taken. I've coded both ways with the same results. If there is anything further I can do to help, please let me know.
WFM on Win2k 2001092308 (0.9.4+)
wfm too, win98 trunk 2001092503. Reporter, make sure that Edit | Preferences | Navigator | History | Session history | Number of pages in session history is set to something greater than 0.
Confirmed session history=50
I crash on Win2k with build 2001092502 Talkback IDs: TB35904195G and TB35903896Q. Steps to reproduce: - load http://www.enrique-pineda.com , - Click on the mozilla comment, - Click on link with JavaScrip history.back() , - Click on Mozilla's arrows back and forth, - Mozilla crashes.
Attached file Talkback stack traces
Browser, not engine --> History:Session
Assignee: rogerl → radha
Status: UNCONFIRMED → NEW
Component: Javascript Engine → History: Session
Ever confirmed: true
QA Contact: pschwartau → claudius
Marking WORKSFORME. Using Mozilla trunk binaries 20010921xx, 20010923xx on WinNT, Linux, Mac 9.1. I follow the steps to reproduce, and the "Previous page" links always work. Perhaps this bug is OSX-specific? me@enrique-pineda.com: please try this again with a more recent build. If the problem still exists, you can reopen this bug - thanks.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → WORKSFORME
(BTW, the Talkback Stack traces suggest a different problem - should be filed as a separate bug to the Plugins component)
Bug 101792 has been filed for the crash issue -
Hi, I am reporting this bug for OS X. So my solution is to switch to either OS9, Linux or Windows and declare that it WORKSFORMETOO? I think I downloaded the latest binary for OS X that was available at the time, but I'll look again.
Reopening bug until it can be checked with the latest build on OSX -
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
Mozilla is now crashing with increasing frequency, the more I try to reproduce the history.back()/history.go bug. Will get back to you on results with the latest binary build. Or, did someone try to suggest my building the latest source myself?
Claudius, can you verify if this happens only in MacOs X? I can not reproduce the problem with the history.back(), nor can I make it crash. If it crashes with the talkback id mentioned here, this should be assigned to plugin component owner.
My experience is that history.back() works in that it takes you to the previous page but it does not scroll you to your previous position as happens when clicking the Back button in the window chrome. And example of this problem can be found at <http://jazz/users/sdagley/publish/Hawaii2001/>. Scroll down the index page, click on one of the images, click on the back button when the large image displays, observe you scroll back to the previous view position, click on one of the images, click on the large image displayed (has a JS:history.back() attached) and you go back to the index page but at the start rather than scrolled view.
I see the problem described by sdagley. Shall look in to it soon.
Target Milestone: --- → mozilla0.9.6
The patch attached takes care of the problem sdagley has reported. I could not reproduce the original problem reported here. Resummarising to reflect the actual problem found.
Summary: Javascript history.back() and history.go(-1) → Javascript history.back() and history.go(-1) doe snot restore scrollbar positions.
r=mcafee, assuming you've tested it & stuff.
*** Bug 105450 has been marked as a duplicate of this bug. ***
Comment on attachment 53366 [details] [diff] [review] Patch for sdagley's report ack, these acronyms (mLSHE, mOSHE, aSHEntry, etc) are getting to me :) sr=alecf, but I'd prefer a review by someone who knows the session history stuff
Attachment #53366 - Flags: superreview+
fix checked in.
Status: REOPENED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
*** Bug 97537 has been marked as a duplicate of this bug. ***
*** Bug 105464 has been marked as a duplicate of this bug. ***
Component: History: Session → Document Navigation
QA Contact: claudius → docshell
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: